--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -18,14 +18,7 @@
         <activity android:name="com.xemplarsoft.games.cross.rps.AndroidLauncher"
             android:configChanges="keyboard|keyboardHidden|navigation|orientation|screenSize|screenLayout"
             android:label="@string/app_name"
-            android:screenOrientation="landscape">
-        </activity>
-        
-        <activity android:name="com.xemplarsoft.games.cross.rps.MainActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:noHistory="true">
-
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
